fix: spacing issue inside compare accounts modal for demo

--- a/packages/wallets/src/features/cfd/screens/CompareAccounts/InstrumentsLabelHighlighted.scss
+++ b/packages/wallets/src/features/cfd/screens/CompareAccounts/InstrumentsLabelHighlighted.scss
@@ -1,9 +1,15 @@
 .wallets-compare-accounts-outline {
     display: flex;
     flex-direction: column;
-    padding: 4rem 2.4rem 0;
+    padding: 4rem 1.8rem 0rem;
     border-radius: 2.4rem;
     @include mobile {
         padding: 7rem 1.5rem 0;
+    }
+
+    &--demo {
+        @include desktop {
+            padding-top: 1.6rem;
+        }
     }
 }
